# open-source-games-catalogue

./: Cargo.toml  index.html  index.js
src/: lib.rs
